# OPCLP5

./: .coverage  .env  .huggingface.yaml  README.md  app.py  df_merged_export.csv  model.joblib  pyproject.toml  readme.md  readme.txt  requirements.txt  te_encoder.joblib
.github/workflows/: ci.yml  deploy_to_hf.yml
App/: streamlit_app.py  streamlit_app_FastApi.py
App/API/: db.py  main.py  models.py  predictor.py  schemas.py  seed.py  test_db.py  test_predictor.py  test_schema.py  test_transformations.py  transformations.py
App/model/: model.joblib  transform.py
modelP4/: Readme.txt  buzon_tom_notebook_VF_062025.ipynb  pyproject.toml
modelP4/.ipynb_checkpoints/: buzon_tom_notebook_VF_062025-checkpoint.ipynb
