[project]
name = "p4v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "scipy (<1.11)",
    "numpy (<2.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (<1.7)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "xgboost (<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
